02-ghost-service.yml
apiVersion: v1
kind: Service
metadata:
  # This service is meant to be used by clients of ghost.
  name: ghost-public
  namespace: ghost
  labels:
    app: ghost
spec:
  ports:
  # Webserver
  - port: 80
    targetPort: 8080
    name: ghost
    protocol: TCP
  selector:
    app: ghost
  type: NodePort
