03-ghost-ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost
  namespace: ghost
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - test.chibifire.com
    secretName: ghost-tls
  rules:
  - host: test.chibifire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ghost
          servicePort: 80
